55555: SystemML Engine Enhancements - Fixes issues static code analysis report (categories: all blocker, some critical), excl javacc issue